# notify-rs

./: .bumpversion.cfg  .pre-commit-config.yaml  Cargo.toml  README.rst  formate.toml  notify_rs.pyi  notify_rust_py.pyi  pyproject.toml  repo_helper.yml  test.py  tox.ini
.github/workflows/: docs_test_action.yml  octocheese.yml  python_ci_linux.yml
doc-source/: index.rst
doc-source/api/: notify-rs.rst
src/: capabilities.rs  lib.rs  notification.rs  notification_handle.rs  server_information.rs
